# dune-daq-arrow-frame-hdf

./: CMakeLists.txt  README.md
app/: daq_hdf_to_arrow.cpp
dune_daq_arrow_frame_hdf/: ToFrame.cpp  ToFrame.hpp
test/: CMakeLists.txt  test_file_channel_map.cpp  test_to_frame.cpp
